visor overflow bug corrected

--- a/main.css
+++ b/main.css
@@ -30,9 +30,10 @@
 	  grid-column-end: 3;
 	  grid-row-start: 1;
 	  grid-row-end: 2;
-	  background-color: #EEE;
+	  background-color: #FAFAFA;
 	  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 	  border-radius: 0.3em 0.3em 0em 0em;
+	  overflow:auto;
   }
   
   .numpad {
@@ -68,7 +69,7 @@
   }
 
   .num_wrapper {
-  	background-color: #E2E2E2;
+  	background-color: #EFEFEF;
   	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
   	border-radius: 0.3em;
   	margin: 0.3em;
@@ -97,7 +98,7 @@
   	text-align: end;
   	font-family: "Arial";
   	font-style: bold;
-  	overflow: hidden;
+  	overflow: auto;
   	margin-right: 2vh;
   }
 
